--- a/index.html
+++ b/index.html
@@ -196,7 +196,10 @@
               <div class="form-group">
                 <button type="submit" class="btn btn-success btn-lg" id="sendMessageButton">Send</button>
               </div>
-               /**
+             <div id="disqus_thread"></div>
+<script>
+
+/**
 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 /*
@@ -213,6 +216,7 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                            
             </form>
           </div>
         </div>
