--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <div class="container">
         <h2 class="text-center">About</h2>
         <hr class="star-light">
-        <div class="row">
+        <div class="column">
           <div class="col-lg-4 ml-auto">
             <p>I was born loved by four gorgeous ladies and two handsome lads -- which are my siblings
             and recieved with a wide arms opened by my lovable parents. I always had my ups and downs in life
@@ -149,7 +149,7 @@
             and a book for others to be inspires.</p>
           </div>
           <div class="col-lg-4 ml-auto">
-          <p> Jeremiah 29:11 "For I know the plans I had for you says the Lord. Plans to prosper you and not to harm you. Plans give you a hpoe and a future" </p>
+          <p> Jeremiah 29:11 "For I know the plans I had for you says the Lord. Plans to prosper you and not to harm you. Plans give you a hope and a future" </p>
           </div>
           <div class="col-lg-8 mx-auto text-center">
             <a href="#" class="btn btn-lg btn-outline">
