--- a/index.html
+++ b/index.html
@@ -137,18 +137,18 @@
         <h2 class="text-center">About</h2>
         <hr class="star-light">
         <div class="row">
-          <div class="row-lg-4 ml-auto">
+          <div class="col-lg-4 ml-auto">
             <p>I was born loved by four gorgeous ladies and two handsome lads -- which are my siblings
             and recieved with a wide arms opened by my lovable parents. I always had my ups and downs in life
             which I had never regretted going through. In my journey I wasn't alone. I always had that someone
             above me to giude me, protect me, bless me and comfort me.</p>
           </div>
-          <div class="row-lg-4 mr-auto">
+          <div class="col-lg-4 mr-auto">
             <p>I might be one step behind than others. I still believe that I can attain my goal/s with flying colors.
             I am a student trying to fulfill one of my dreams. I still believe that God will make a picturesque of my life
             and a book for others to be inspires.</p>
           </div>
-          <div class="row-lg-4 ml-auto">
+          <div class="col-lg-4 ml-auto">
           <p> Jeremiah 29:11 "For I know the plans I had for you says the Lord. Plans to prosper you and not to harm you. Plans give you a hope and a future" </p>
           </div>
           <div class="col-lg-8 mx-auto text-center">
