--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     </header>
 
     <!-- Portfolio Grid Section -->
+   <!-- Portfolio Grid Section -->
     <section id="portfolio">
       <div class="container">
         <h2 class="text-center">Portfolio</h2>
@@ -129,7 +130,6 @@
           </div>
         </div>
       </div>
-    </section>
 
     <!-- About Section -->
     <section class="success" id="about">
