--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="container">
         <img class="img-fluid" src="img/kate.jpg" alt="">
         <div class="intro-text">
-          <span class="name">Katelyn De Vera Parayno</span>
+          <span class="name">Katelyn Parayno</span>
           <hr class="star-light">
           <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
         </div>
@@ -62,7 +62,6 @@
     </header>
 
     <!-- Portfolio Grid Section -->
-   <!-- Portfolio Grid Section -->
     <section id="portfolio">
       <div class="container">
         <h2 class="text-center">Portfolio</h2>
@@ -75,7 +74,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/resume.png" alt="">
+              <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item">
@@ -130,6 +129,7 @@
           </div>
         </div>
       </div>
+    </section>
 
     <!-- About Section -->
     <section class="success" id="about">
@@ -146,10 +146,8 @@
           <div class="col-lg-4 mr-auto">
             <p>I might be one step behind than others. I still believe that I can attain my goal/s with flying colors.
             I am a student trying to fulfill one of my dreams. I still believe that God will make a picturesque of my life
-            and a book for others to be inspires.</p>
-          </div>
-          <div class="col-lg-4 ml-auto">
-          <p> Jeremiah 29:11 "For I know the plans I had for you says the Lord. Plans to prosper you and not to harm you. Plans give you a hope and a future" </p>
+            and a book for others to be inspires. Jeremiah 29:11 "For I know the plans I had for you says the Lord. Plans to prosper you and not to harm you. Plans give you a hope and a future" </p>
+
           </div>
           <div class="col-lg-8 mx-auto text-center">
             <a href="#" class="btn btn-lg btn-outline">
@@ -167,26 +165,6 @@
         <h2 class="text-center">Contact Me</h2>
         <hr class="star-primary">
         <div class="row">
-        <script>
-
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-/*
-var disqus_config = function () {
-this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-*/
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://kateparayno-github-io.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
-})();
-</script>
-<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-                            
           <div class="col-lg-8 mx-auto">
             <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
             <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
@@ -224,19 +202,12 @@ s.setAttribute('data-timestamp', +new Date());
               <div class="form-group">
                 <button type="submit" class="btn btn-success btn-lg" id="sendMessageButton">Send</button>
               </div>
-             <div id="disqus_thread"></div>
-
             </form>
           </div>
         </div>
       </div>
     </section>
-    <div id="disqus_thread"></div>
 
-
-
-
-                            
     <!-- Footer -->
     <footer class="text-center">
       <div class="footer-above">
@@ -318,7 +289,7 @@ s.setAttribute('data-timestamp', +new Date());
                 <div class="modal-body">
                   <h2>Project Title</h2>
                   <hr class="star-primary">
-                  <img class="img-fluid img-centered" src="img/portfolio/cabin.png" alt="">
+                  <img class="img-fluid img-centered" src="img/portfolio/resume.png" alt="">
                   <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
                     <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                   <ul class="list-inline item-details">
