--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                   <hr class="star-primary">
                   <img class="img-fluid img-centered" src="img/portfolio/resume.png" alt="">
                   <p>Use this area of the page to describe your project. The icon above is part of a free icon set by
-                    <a href="https://kateparayno.github.io/resumee.github.io/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                    <a href="https://kateparayno.github.io/resumee.github.io/">resumee</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                   <ul class="list-inline item-details">
                     <li>Client:
                       <strong>
